<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                tools:background="@drawable/bg_gradient_warm">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/iconImageView"
        android:src="@drawable/cloudy_night"/>

    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconImageView"
        tools:text="12 PM"
        android:id="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/timeLabel"
        android:paddingTop="30dp"
        android:id="@+id/degreeLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            tools:text="--"
            android:id="@+id/degreeValue"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:src="@drawable/degree"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/degreeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:weightSum="100">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            tools:paddingLeft="30dp">

            <TextView
                android:text="@string/pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="--"
                android:id="@+id/pressureTextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <TextView
                android:text="@string/rain_snow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="--"
                android:id="@+id/precipChanceTextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            tools:paddingLeft="30dp">

            <TextView
                android:text="@string/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="--"
                android:id="@+id/humidityTextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <TextView
                android:text="@string/cloud_cover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="--"
                android:id="@+id/cloudCoverTextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            tools:paddingLeft="30dp">

            <TextView
                android:text="@string/wind_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="--"
                android:id="@+id/windSpeedTextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <TextView
                android:text="@string/visibility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="--"
                android:id="@+id/visibilityTextView"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

 </RelativeLayout>
